--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js -e hbs,js,css"
+    "start": "node src/index.js -e hbs,js,css"
   },
   "author": "",
   "license": "ISC",
