--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node app/index.js"
+    "build": "node ./app/index.js",
+    "start": "node ./app/index.js"
   },
   "author": "",
   "license": "ISC",
